# zpad

./: CMakeLists.txt  README.md  internals.md
language/: common_res.h
language/zpad_en_us/: menu_en_us.rc  zpad_en_us.rc
scintilla/: CMakeLists.txt  README.md  ScintillaTypes.h
scintilla/core/: CellBuffer.cpp  Document.h  EditModel.cpp  EditModel.h  EditView.cpp  EditView.h  Editor.cpp  Editor.h  Geometry.h  MarginView.cpp  Platform.h  PositionCache.h  ScintillaBase.cpp  ScintillaBase.h  Selection.cpp  Selection.h  Style.h  UniConversion.cpp  ViewStyle.cpp  ViewStyle.h
scintilla/win32/: PlatWin.cpp  PlatWin.h  ScintillaDLL.cpp  ScintillaWin.cpp  WinTypes.h
win/: CMakeLists.txt  MainFrm.h  View.h  ZPad.cpp  ZPad.h  ZPad.rc  diaglogs.h  dlapi.h  edit.h  encoding.c  encoding.h  encodingdetection.cpp  helpers.h  notepad2.c  notepad2.h  notepad3.c  notepad3.h  resource.h  scicall.h  stdafx.cpp  styles.c  styles.h  typedefs.h
win/stylelexers/: editlexer.c  editlexer.h
